--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- <link type="text/css" rel="stylesheet" href="css/lightgallery-bundle.css" /> -->
   </head>
   <body>
+    <!-- <script src="js/lightgallery.umd.js"></script>
+    <script src="js/plugins/lg-thumbnail.umd.js"></script>
+    <script src="js/plugins/lg-zoom.umd.js"></script> -->
+    <!-- <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId            : 361359869257454,
+          autoLogAppEvents : true,
+          xfbml            : true,
+          version          : 'v14.0'
+        });
+      };
+    </script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
